<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pannenhilfe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="flashlightButton">Taschenlampe</string>
    <string name="title_activity_flashlight">Taschenlampe</string>
    <string name="pannenbehebung_button_text">Panne beheben</string>
    <string name="wichtige_nummern_button_text">Wichtige Nummern</string>
    <string name="absicherung_gefahrenstelle_button_text">Gefahren- stelle absichern</string>
    <string name="werkstatt_finden_button_text">Werkstatt finden</string>
    <string name="title_activity_werkstatt_finden_activity">Werkstatt finden</string>
    <string name="title_activity_gefahrenstelle_absichern">Gefahrenstelle absichern</string>
    <string name="title_activity_panne_beheben">Panne beheben</string>
    <string name="title_activity_wichtige_nummern">Wichtige Nummern</string>
    <string name="flashligt_switch_text">An</string>
    <string name="call_button_text">Anrufen</string>
    <string name="title_activity_tutorial_list_view_acitivity_anzeige">TutorialListViewAcitivityAnzeige</string>
    <string name="nummer_hinzufuegen_text">Nummer hinzufügen</string>
    <string name="wichtige_nummern_row_header_text">Wichtige Nummern</string>
    <string name="title_activity_maps">Werkstatt finden</string>
    <string name="placesSearchTagFieldString">z.b. police ...</string>
    <string name="mapsSearchButtonText">suchen</string>
    <string name="title_activity_start_splash">Pannenhilfe</string>
    <string name="StartSplashText1">Starte</string>
    <string name="StartSplashText2">. . .</string>
    <string name="StartSplashHeader">Pannenhilfe</string>
    <string name="panne_dokumentieren_button_text">Panne doku- mentieren</string>
    <string name="title_activity_maps_activity2">Map</string>
    <string name="werkstatt_finden_text_resource">Durch Klicken auf den Button kann auf der Karte nach dem Element, dass im Dropdown Menü ausgewählt ist, gesucht werden.</string>
    <string name="wichtige_nummern_row_contact_name_text">beispieltext</string>
    <string name="wichtige_nummern_row_contact_number_text">beispieltext_zwei</string>
    <string name="panne_dokumentieren_header">Vorhandene Bilder</string>


    <string-array name="search_tag_array">
        <item>Autohof</item>
        <item>Pannendienst</item>
        <item>Polizei</item>
        <item>Strassenmeisterei</item>
        <item>Tankstelle</item>
        <item>Werkstatt</item>
    </string-array>
    <string name="title_activity_panne_dokumentieren_fullscreen_bild">
        PanneDokumentierenFullscreenBild
    </string>
    <string name="title_activity_gefahrenstelle_absichern__anleitung">
        GefahrenstelleAbsichern_Anleitung
    </string>
    <string name="title_activity_fragment_bauteil_tab">FragmentBauteilTab</string>
    <string name="title_activity_panne_beheben_fragment_symptom_tab">
        PanneBehebenFragmentSymptomTab
    </string>


    <string name="title_activity_panne_beheben_anleitung">PanneBehebenAnleitung</string>

    <!-- INNERORTS -->
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step1">Warnblinkanlage anschalten</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step2">Handbremse ziehen und Gang einlegen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step3">Lenkrad eindrehen, sodass die Reifen von der Fahrbahn weg zeigen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step4">Bei Dunkelheit Beleuchtung des Autos anlassen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step5">Warnweste anziehen (die Warnweste befindet sich oft im Hanschuh- oder Seitenfach)</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step6">Verkehr beobachten und vorsichtig aussteigen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step7">Eventuelle Mitfahrer sollen ebenfalls Warnweste anziehen und aussteigen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step8">Warndreieck aus dem Kofferraum nehmen und aufklappen \n \n Kofferraum aufgeklappt lassen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step9">Warndreieck gut sichtbar vor sich tragen und entgegen Fahrtrichtung laufen \n \n Entgegenkommenden Verkehr durch Winken mit Warndreieck warnen</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step10">Nach mindestens 100 Metern Warndreieck gut sichtbar am Fahrbahnrand abstellen \n \n 100 Meter = Abstand zwischen 4 Straßenpfosten</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step11">Verkehr beobachten und vorsichtig zum Fahrzeug zurückkehren</string>
    <string name="gefahrenstelle_absichern_innerorts_anleitung_step12">Bei liegengebliebenen Teilen auf der Fahrbahn Polizei verständigen und diese nicht selbst von der Fahrbahn entfernen</string>


    <!-- AUSSERORTS -->
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step1">Warnblinkanlage anschalten</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step2">Handbremse ziehen und Gang einlegen</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step3">Lenkrad eindrehen, sodass die Reifen von der Fahrbahn weg zeigen</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step4">Bei Dunkelheit Beleuchtung des Autos anlassen</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step5">Warnweste anziehen (die Warnweste befindet sich oft im Hanschuh- oder Seitenfach)</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step6">Verkehr beobachten und vorsichtig aussteigen </string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step7">Eventuelle Mitfahrer sollen ebenfalls Warnweste anziehen und sich hinter die Leitplanke begeben</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step8">Warndreieck aus dem Kofferraum nehmen und aufklappen \n \n Kofferraum aufgeklappt lassen</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step9">Warndreieck gut sichtbar vor sich tragen und entgegen Fahrtrichtung laufen \n \n Entgegenkommenden Verkehr durch Winken mit Warndreieck warnen</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step10">Nach mindestens 50 Metern Warndreieck gut sichtbar am Fahrbahnrand abstellen, sofern dazwischen keine Kreuzung liegt</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step11">Verkehr beobachten und vorsichtig zum Fahrzeug zurückkehren</string>
    <string name="gefahrenstelle_absichern_ausserorts_anleitung_step12">Bei liegengebliebenen Teilen auf der Fahrbahn Polizei verständigen und diese nicht selbst von der Fahrbahn entfernen</string>

    <!-- KURVE -->
    <string name="gefahrenstelle_absichern_kurve_anleitung_step1">Warnblinkanlage anschalten</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step2">Wenn möglich, Auto an anderer Stelle, an der freiere Sicht möglich ist, abstellen.</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step3">Handbremse ziehen und Gang einlegen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step4">Lenkrad eindrehen, sodass die Reifen von der Fahrbahn weg zeigen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step5">Bei Dunkelheit Beleuchtung des Autos anlassen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step6">Warnweste anziehen (die Warnweste befindet sich oft im Hanschuh- oder Seitenfach)</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step7">Verkehr beobachten und je nach Ort auf der Fahrer oder Beifahrerseite aussteigen </string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step8">Eventuelle Mitfahrer sollen ebenfalls Warnweste anziehen und das Fahrzeug verlassen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step9">Warndreieck aus dem Kofferraum nehmen und aufklappen \n \n Kofferraum aufgeklappt lassen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step10">Warndreieck gut sichtbar vor sich tragen und entgegen Fahrtrichtung laufen \n \n Entgegenkommenden Verkehr durch Winken mit Warndreieck warnen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step11">Warndreieck  in ausreichendem Abstand vor der Kurve gut sichtbar am Fahrbahnrand abstellen</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step12">Verkehr beobachten und vorsichtig zum Fahrzeug zurückkehren</string>
    <string name="gefahrenstelle_absichern_kurve_anleitung_step13">Bei liegengebliebenen Teilen auf der Fahrbahn Polizei verständigen und diese nicht selbst von der Fahrbahn entfernen</string>


    <!-- AUTOBAHN -->
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step1">Warnblinkanlage anschalten</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step2">Handbremse ziehen und Gang einlegen</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step3">Lenkrad eindrehen, sodass die Reifen von der Fahrbahn weg zeigen</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step4">Bei Dunkelheit Beleuchtung des Autos anlassen</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step5">Warnweste anziehen (die Warnweste befindet sich oft im Hanschuh- oder Seitenfach)</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step6">Verkehr beobachten und auf der <b>Beifahrerseite</b> aussteigen.</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step7">Eventuelle Mitfahrer sollen ebenfalls Warnweste anziehen und sich hinter die Leitplanke begeben</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step8">Warndreieck aus dem Kofferraum nehmen und aufklappen</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step9">Warndreieck gut sichtbar vor sich tragen und entgegen Fahrtrichtung laufen \n \n Entgegenkommenden Verkehr durch Winken mit Warndreieck warnen \n \n <b>Hinter den Leitplanken laufen!</b></string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step10">Nach mindestens 150 Metern das Warndreieck gut sichtbar am Fahrbahnrand abstellen \n \n 150 Meter = Abstand zwischen 6 Straßenpfosten</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step11">Zurück hinter die Leitplanke begeben und auf Fahrzeughöhe zurückbegeben</string>
    <string name="gefahrenstelle_absichern_autobahn_anleitung_step12">Bei liegengebliebenen Teilen auf der Fahrbahn Polizei verständigen und diese nicht selbst von der Fahrbahn entfernen</string>

    <!-- -->
    <string name="taschenlampe_beschreibungstext">Hier kann die Taschenlampe ein- und ausgeschaltet werden</string>


</resources>
