<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/flashlightButton"
        android:id="@+id/flashlight_button_text"
        android:background="@drawable/ic_taschenlampe"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/panne_beheben_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/absicherung_gefahrenstelle_button_text"
        android:background="@drawable/ic_gefahrenstelle3"
        android:id="@+id/gefahrenstelle_absichern_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/wichtige_nummern_button"
        android:layout_alignStart="@+id/wichtige_nummern_button" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/pannenbehebung_button_text"
        android:background="@drawable/ic_panne2"
        android:id="@+id/panne_beheben_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/flashlight_button_text"
        android:layout_alignStart="@+id/flashlight_button_text" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/wichtige_nummern_button_text"
        android:background="@drawable/ic_kontakte1"
        android:id="@+id/wichtige_nummern_button"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/flashlight_button_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/werkstatt_finden_button_text"
        android:background="@drawable/ic_werkstatt1"
        android:id="@+id/werkstatt_finden_button"
        android:layout_below="@+id/panne_beheben_button"
        android:layout_alignLeft="@+id/panne_beheben_button"
        android:layout_alignStart="@+id/panne_beheben_button"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/unfall_dokumentieren_button_text"
        android:background="@drawable/ic_camera2"
        android:id="@+id/unfall_dokumentieren_button"
        android:layout_alignTop="@+id/werkstatt_finden_button"
        android:layout_alignLeft="@+id/gefahrenstelle_absichern_button"
        android:layout_alignStart="@+id/gefahrenstelle_absichern_button" />
</RelativeLayout>
