<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.flo.myapplication.GefahrenstelleAbsichernAnleitung">



    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipperAutobahn"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/gefahrenstelle_absichern_autobahn_stepTextview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <!-- First Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip1"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warnblinkanlage" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step1"
             >
            </TextView>

        </LinearLayout>

        <!-- 12th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip12"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_auspuff_verloren" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step12"
              >
            </TextView>
        </LinearLayout>

        <!-- 11th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip11"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/ic_kein_bild" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step11"
               >
            </TextView>
        </LinearLayout>

        <!-- 10th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip10"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warndreieck_aufgestellt" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step10"
               >
            </TextView>
        </LinearLayout>

        <!-- 9th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip9"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warndreieck_aufstellen" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step9"
                >
            </TextView>
        </LinearLayout>

        <!-- 28th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip8"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warndreieck_verpackt" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step8"
               >
            </TextView>
        </LinearLayout>

        <!-- 7th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip7"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/ic_kein_bild" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step7"
              >
            </TextView>
        </LinearLayout>

        <!-- 6th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip6"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/ic_kein_bild" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step6"
               >
            </TextView>
        </LinearLayout>

        <!-- 5th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip5"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warnweste" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step5"
               >
            </TextView>
        </LinearLayout>

        <!-- 4th Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip4"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_scheinwerfer" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step4"
               >
            </TextView>
        </LinearLayout>

        <!-- 3rd Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip3"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_lenkrad" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step3"
               >
            </TextView>
        </LinearLayout>


        <!-- 2nd Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_autobahn_anleitung_flip2"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_handbremse" />

            <TextView
                style="@style/textStyleGefahrenstelleAbsichern"
                android:text="@string/gefahrenstelle_absichern_autobahn_anleitung_step2"
               >
            </TextView>
        </LinearLayout>

    </ViewFlipper>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Schritt 1 / 11 "
        android:id="@+id/gefahrenstelle_absichern_autobahn_stepTextview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zurück"
        android:id="@+id/gefahrenstelle_absichern_autobahn_previousStepButton"
        android:layout_alignTop="@+id/gefahrenstelle_absichern_autobahn_nextStepButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vor"
        android:id="@+id/gefahrenstelle_absichern_autobahn_nextStepButton"
        android:layout_alignTop="@+id/gefahrenstelle_absichern_autobahn_stepTextview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
