<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.flo.myapplication.GefahrenstelleAbsichernAnleitung">



    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipperAusserorts"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/gefahrenstelle_absichern_ausserorts_stepTextview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <!-- First Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/gefahrenstelle_absichern_ausserorts_anleitung_flip1"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_warnblinkanlage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gefahrenstelle_absichern_ausserorts_anleitung_step1"
                android:textColor="#ffabb1b7"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>


        <!-- 2nd Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="15dp"
                android:id="@+id/gefahrenstelle_absichern_ausserorts_anleitung_flip2"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_auspuff_verloren" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gefahrenstelle_absichern_ausserorts_anleitung_step2"
                android:textColor="#ffabb1b7"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

        <!-- 3rd Flip  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="15dp"
                android:id="@+id/gefahrenstelle_absichern_ausserorts_anleitung_flip3"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/absichern_lenkrad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gefahrenstelle_absichern_ausserorts_anleitung_step3"
                android:textColor="#ffabb1b7"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

    </ViewFlipper>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Schritt 1 / 9 "
        android:id="@+id/gefahrenstelle_absichern_ausserorts_stepTextview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zurück"
        android:id="@+id/gefahrenstelle_absichern_ausserorts_previousStepButton"
        android:layout_alignTop="@+id/gefahrenstelle_absichern_ausserorts_nextStepButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vor"
        android:id="@+id/gefahrenstelle_absichern_ausserorts_nextStepButton"
        android:layout_alignTop="@+id/gefahrenstelle_absichern_ausserorts_stepTextview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
